Resolve more sonar issues.